zeit.cms changes
================

1.39.4 (unreleased)
-------------------

- Favicon aktualisiert.
- Wenn im XML für die Keywords ein Fehler ist, wird das Laden abgebrochen und
  die alte Fassung behalten (#6046).
- Last-semantic-change wird direkt beim Anlegen eines Objektes gestzt, nicht
  erst beim Einchecken (#6476).
- Neue Option »Schlagzeile«.

Technische Änderungen
+++++++++++++++++++++

- Relationen zwischen Content-Objekten werden über einen allgemeinen Index
  abgebildet, nicht mehr einzelne (related, syndicated, image) (#6300).

1.39.3 (2009-11-25)
-------------------

Technische Änderungen
+++++++++++++++++++++

- Fehlertolerante Funktion zum XML parsen: objectify_soup_fromstring.
- Das XMLTree-Feld hat einen optionalen Parameter tidy_input, mit dem es
  kaputtes Markup per BeautifulSoup repariert.

1.39.2 (2009-11-06)
-------------------

- Daten an das Veröffentlichungsscript werden nicht mehr per STDIN übermittelt
  sondern per Datei und Argument.


1.39.1 (2009-11-04)
-------------------

Technische Änderungen
+++++++++++++++++++++

- Ermöglicht zusätzliche Drop-Query-Argumente bei
  ``createDraggableContentObject`` anzugeben.


1.39.0 (2009-11-02)
-------------------

Technische Änderungen
+++++++++++++++++++++

- `ICMSContent` adapter flexibilisiert um per Scheme und/oder Netloc
  verschiedene Repositorys ansprechen zu können (#6385).

- UUIDs werden bereits beim erzeugen (ObjectCreatedEvent) vergeben (#6385).

- UUIDs werden bereits beim kopieren neu vergeben (nur auf dem direkt kopierten
  Objekt, #6385)

- Adaptieren eines Objekts auf ITypeDeclaration (#6385).


1.38.1 (2009-10-26)
-------------------

- Asset-Badges werden jetzt zuverlässig gespeichert (#6165).


1.38.0 (2009-10-19)
-------------------

- Site-Steuerung ist jetzt ein Dropdown (#6350).

- Die alte Suche (zeit.search) wurde entfernt.

- Extra Permission für den Repository-Navigationsbaum (#6165).

1.37.1 (2009-10-12)
-------------------

- Preview-Redirect ist jetzt trusted.

