@@ -22,4 +22,6 @@
 
   <include package="zeit.cms.testcontenttype" />
 
+  <include package="zeit.workflow" />
+
 </configure>
